compiler/testData/diagnostics/tests/controlFlowAnalysis/propertiesOrderInPackage.kt
// FIR_IDENTICAL
package a

val a : Int = <!UNINITIALIZED_VARIABLE!>b<!>
val b : Int = a
